  "org.freedesktop.DBus.Properties" interface. It is not expected that anybody
  is still using this API.
* dhcp: honor "ID_NET_DHCP_BROADCAST" udev attribute to set the broadcast flag.
  This allows to configure devices in udev for which DHCPOFFER messages are to be
  broadcast.
* firewall: add nftables firewall backend for configuring IPv4 NAT with shared
  mode.
* ethtool: add support for pause settings.
* Support "prohibit"/"blackhole"/"unreachable" type routing rules.
* Now NetworkManager preserves by default the existing traffic control
  configuration (qdiscs and filters) when activating a connection.
* wifi/iwd: mirror NetworkManager connection profiles to iwd config files.
* API CHANGE: vala: fix wrongly generated vapi for WireGuard API.
* wifi: fix parsing of Microsoft Network Cost information element for
  detecting metered networks.
* dhcp: support option 249 (Microsoft Classless Static Route) with nettools
  internal DHCP plugin.
* initrd: support the "rd.net.dhcp.retry" kernel argument for controlling retry
  and timeout to get a DHCP lease.
* API CHANGE: hide definitions of structs for NMSetting and NMSimpleConnection from
  public headers.
* Major restructuring of the source code.
* Many bugfixes and minor improvements.

=============================================
NetworkManager-1.30
Overview of changes since NetworkManager-1.28
=============================================

* Increase timeout of NetworkManager-wait-online.service to 60 seconds.
* Add "ipv4.dhcp-client-id=ipv6-duid" option for RFC4361.
* The dhcpcd plugin now requires a minimum version of dhcpcd-9.3.3 with
  the --noconfigure option. Using an older version will cause dhcpcd to
  exit with a status code of 1.
* Support building against musl libc.
* Support new ethtool offload features.
* Add support for WPA3 Enterprise Suite-B 192 bit mode.
* Add support for handling Veth devices.
* New hostname settings for controlling configuring the hostname from